--- a/package.json
+++ b/package.json
@@ -8,13 +8,17 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "lib-flexible": "^0.3.2",
+    "path": "^0.12.7",
     "postcss-px2rem": "^0.3.0",
     "stylus": "^0.54.8",
     "stylus-loader": "3.0.2",
+    "swiper": "5.4.5",
     "vue": "^2.6.11",
-    "vue-router": "^3.5.1"
+    "vue-router": "^3.5.1",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
